<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lloyddsilva.brunomarsartist.ui.SongsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/songs"
        android:id="@+id/textView"
        android:layout_gravity="center" />

    <RadioGroup
        android:id="@+id/songsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lazy_day"
            android:id="@+id/lazyDayRadioButton"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treasure"
            android:id="@+id/treasureRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uptown"
            android:id="@+id/uptownRadioButton" />
    </RadioGroup>

    <Button android:id="@+id/startPlayerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginTop="10dp"
        />
    <Button android:id="@+id/restartPlayerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:layout_marginTop="10dp"
        />
    <Button android:id="@+id/pausePlayerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
